--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,43 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="16dp"
-    android:background="?android:attr/selectableItemBackground"
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:padding="8dp"
+android:background="?android:attr/selectableItemBackground"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+
+
+<ImageView
+    android:id="@+id/imageView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="160dp"
+    android:scaleType="centerCrop"
+    tools:src="@drawable/a" />
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="160dp"
+    android:alpha="0.3"
+    android:background="#424242" />
 
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/a" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/imageView"
-        android:layout_toEndOf="@id/imageView"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:maxLines="1"
-        android:ellipsize="end"
-        tools:text="Judul"
-        android:id="@+id/textViewJudul"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-    <TextView
-        tools:text="Deskripsi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewJudul"
-        android:layout_alignLeft="@+id/textViewJudul"
-        android:layout_alignStart="@+id/textViewJudul"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:id="@+id/textViewDeskripsi"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="160dp"
+    android:gravity="center"
+    android:textColor="@android:color/white"
+    android:id="@+id/textViewJudul"
+    tools:text="Judul"
+    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
 </RelativeLayout>
+
